--- a/public/css/splash-screen.css
+++ b/public/css/splash-screen.css
@@ -32,7 +32,7 @@ body {
 }
 
 .splash-spinner .path {
-  stroke: #312c63;
+  stroke: #009EF7;
   stroke-linecap: round;
   animation: dash 1.5s ease-in-out infinite;
 }
